# squidgy-testy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
example/: book_author.txt
example/tests/: test_book_author.yaml
squidgy_testy/: __main__.py  assertions.py  gpt3.py  model.py  recorder.py  runner.py  service.py  store.py
tests/: base_tests.py  test_parsing.py  test_parsing.yaml  test_runner.py  test_similar_to.py  test_store.py
