[project]
name = "squidgy-testy"
version = "0.1.0"
authors = [
  { name="Dan Diephouse", email="dan@squidgies.app" },
]
description = "A prompt unit testing framework."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/squidgyai/squidgy-testy"
"Bug Tracker" = "https://github.com/squidgyai/squidgy-testy/issues"